@startuml erd
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as u {
  *id : uuid <<generated>>
  --
  *first_name : text
  *last_name : text
  *email : text
  *photo_url : text
  --
  *created_at : date
  deleted_at : date
}

entity "Group" as g {
  *id : uuid <<generated>>
  --
  *name : text
  *photo_url : text
  --
  *created_at : date
  deleted_at : date
}

entity "UserGroup" as ug {
  *id : uuid <<generated>>
  --
  *user_id : uuid <<FK>>
  *group_id : uuid <<FK>>
  --
  *created_at : date
  deleted_at : date
}

entity "Expense" as e {
  *id : uuid <<generated>>
  --
  title : text
  *amount : decimal
  *paid_each : decimal
  *group_id : uuid <<FK>>
  ' references user
  *paid_by_id : uuid <<FK>> 
  *category_id: uuid <<FK>>
  --
  *created_at : date
  deleted_at : date
}

entity "UserExpense" as ue {
  *id : uuid <<generated>>
  --
  *user_id : uuid <<FK>>
  *expense_id : uuid <<FK>>
  --
  *created_at : date
  deleted_at : date
}

entity "Category" as c {
  *id : uuid <<generated>>
  --
  *name : text
  *color : text
  --
  *created_at : date
  deleted_at : date
}

entity "UserBalance" as ub {
  *id : uuid <<generated>>
  --
  *user_id_1 : uuid <<FK>>
  *user_id_2 : uuid <<FK>>
  *balance : decimal
  --
  *created_at : date
  deleted_at : date

}

u ||--o{ ue
e ||--o{ ue

u ||--o{ ug
g ||--o{ ug

e }o--|| c

u ||--o{ ub
u ||--o{ ub

g ||--o{ e


@enduml